# Authentication

authentication/: Dockerfile  compose.yml  pyproject.toml
authentication/app/: main.py
